data/derived/fa15/progs/unify/prog1055.ml.out
Characters 93-97:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type (('a -> 'b) -> 'a) -> ('a -> 'b) -> 'a
       but an expression was expected of type
         (('a -> 'b) -> 'a) -> ('a -> 'b) -> ('a -> 'b) -> 'b
       The type variable 'a occurs inside ('a -> 'b) -> 'b
